logs/mediagoblin-easy-install.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/mediagoblin_easy_install'...
Compiling './lib/python3.5/site-packages/mediagoblin_easy_install/app.py'...
***   File "./lib/python3.5/site-packages/mediagoblin_easy_install/app.py", line 42
    print "\nCaught SIGINT Signal... Exiting now."
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mediagoblin_easy_install/check.py'...
***   File "./lib/python3.5/site-packages/mediagoblin_easy_install/check.py", line 35
    print ""
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mediagoblin_easy_install/parameters.py'...
***   File "./lib/python3.5/site-packages/mediagoblin_easy_install/parameters.py", line 254
    print question
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mediagoblin_easy_install/plugins'...
Listing './lib/python3.5/site-packages/mediagoblin_easy_install/plugins/setup_archive'...
Compiling './lib/python3.5/site-packages/mediagoblin_easy_install/plugins/setup_archive/app.py'...
***   File "./lib/python3.5/site-packages/mediagoblin_easy_install/plugins/setup_archive/app.py", line 43
    print "\nCaught SIGINT Signal... Exiting now."
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mediagoblin_easy_install/tasks.py'...
***   File "./lib/python3.5/site-packages/mediagoblin_easy_install/tasks.py", line 86
    print output
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mediagoblin_easy_install-0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
